<resources>

    <!--
    /**
     * I have put a lot of effort to ensure that everything is working fine. If you find any problem
     * feel free to contact me via the Codecanyon item's comment section or send me a personal
     * message from here: https://codecanyon.net/user/neurondigital?ref=neurondigital#contact
     *
     * Thanks for buying this Template!
     * Check out my other products on CodeCanyon: http://codecanyon.net/user/neurondigital/portfolio?ref=neurondigital
     */
    -->

    <!-- General -->
    <string name="app_name">Selfcaremanagement</string>
    <string name="currency">$</string>


    <!-- Navigation Drawer -->
    <string name="nav_all_places">All Places</string>
    <string name="nav_news">Blog</string>
    <string name="nav_bookmarks">Bookmarked</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_info">Info</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_categories_more">more</string>
    <string name="nav_logout">Logout</string>
    <string name="menu">Menu</string>

    <!-- Profile -->
    <string name="profile_title">My Profile</string>
    <string name="profile_password_confirm">Confirm Password</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_change_username">Change Username</string>
    <string name="profile_save_button">Save Changes</string>


    <!-- Search -->
    <string name="search">search</string>


    <!-- Comments screen -->
    <string name="comments">Comments</string>
    <string name="action_comment">Comment</string>
    <string name="action_refresh">Reload</string>


    <!-- Categories screen -->
    <string name="categories_page_title">Categories</string>


    <!-- List Screen -->
    <string name="menu_list">List View</string>
    <string name="menu_map">Map View</string>
    <string name="menu_current_location">Current Location</string>
    <string name="menu_sort_recent">Recent</string>
    <string name="menu_sort_rating">Best Rated</string>
    <string name="menu_sort_distance">Nearest</string>


    <!-- Map Screen -->
    <string name="map_redo_search">Redo Search in Area</string>


    <!-- Bookmark Screen -->
    <string name="Bookmark_page_title">Bookmarked</string>
    <string name="Bookmark">Bookmark</string>
    <string name="empty">No Items</string>


    <!-- Places -->
    <string name="share_icon_title">Share</string>
    <string name="view_deal_button">View Deal</string>
    <string name="reviews_title">Reviews</string>
    <string name="reviews_load_more">Load More</string>
    <string name="reviews_my_review_hint">Give your Review</string>
    <string name="reviews_fa_star">&#xf005;</string>
    <string name="reviews_fa_star_o">&#xf006;</string>
    <string name="reviews_submit">SUBMIT</string>
    <string name="place_email">Email</string>
    <string name="place_address">Location</string>
    <string name="place_telephone">Phone</string>
    <string name="place_featured">Featured</string>
    <string name="main">Main</string>
    <string name="place_card_ratings">RATINGS</string>

    <!-- News/Blog -->
    <string name="back">Back</string>
    <string name="news">Blog</string>
    <string name="photos_count"> {faw-camera} %1$s photos</string>


    <!-- Login splash screen Screen -->
    <string name="login_title">Login</string>
    <string name="login_or">OR</string>
    <string name="login_skip">SKIP</string>
    <string name="login_register">Create an Account</string>
    <string name="login_button">Login</string>
    <string name="facebook_login_button">Login with Facebook</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="register_username">Username</string>
    <string name="register_title">New Account</string>
    <string name="register_button">Create</string>


    <!-- Info Screen -->
    <string name="info_page_title">Info</string>


    <!-- Premium screen -->
    <string name="premium_title">Go Premium</string>
    <string name="premium_purchase">  GO PREMIUM  </string>
    <string name="premium_noads">No Ads</string>


    <!-- settings screen -->
    <string name="settings_title">Settings</string>
    <string name="pref_enable_push_notifications_title">General Notifications</string>
    <string name="pref_enable_push_notifications_summery">Receive notifications for general news.</string>


    <!-- preference save key (to save bookmarks in user phone) -->
    <string name="save_preference_name">cityguide_app</string>


    <!-- Pretty Time -->
    <string name="date_util_unit_second">sec</string>
    <string name="date_util_unit_seconds">sec</string>
    <string name="date_util_unit_minute">min</string>
    <string name="date_util_unit_minutes">mins</string>
    <string name="date_util_suffix">ago</string>


    <!-- Internet error -->
    <string name="no_internet_error_title">No Internet</string>
    <string name="no_internet_error">No Internet Detected. Please turn on your Wifi</string>

    <!--  error -->
    <string name="error_title">Error</string>


    <!--SHARE-->
    <string name="share_message">Check out this Place:</string>


    <!--RATE-->
    <!-- link is created automatically from package. Make sure package id is the same as the one used in google play -->
    <string name="unable_to_reach_market">Error reaching market. Please check your internet connection</string>
    <integer name="rate_shows_after_X_starts">5</integer>
    <string name="rate_title">Please Rate us</string>
    <string name="rate_text">If you like the app, feel free to leave a good rating.</string>


    <!-- Alert -->
    <string name="Alert_accept">OK</string>
    <string name="Alert_cancel">Cancel</string>


    <!--Place owner email-->
    <string name="email_no_email">There are no email clients installed.</string>
    <string name="email_send_email">Send email...</string>

    <!-- legal -->
    <string name="privacy">Privacy Policy</string>
    <string name="terms">Terms</string>

    <!-- Push notification channel id -->
    <string name="default_notification_channel_id">push_notifications</string>
    <string name="default_notification_channel_name">push notifications</string>
    <string name="default_notification_channel_description">news push notifications</string>


    <!--Admob - Get yours from Admob: https://www.google.com/admob/-->
    <!--Admob App ID (sample id: ca-app-pub-3940256099942544~3347511713)-->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <!--Admob Ad unit ids-->
    <string name="interstitial_ad"></string>
    <integer name="ad_shows_after_X_clicks">5</integer>
    <string name="banner_ad"></string>
    <string name="native_ad"></string>

    <!--Google Maps Key - get your key from here: https://developers.google.com/maps/documentation/javascript/get-api-key-->
    <string name="GoogleMapKey"></string>


    <!--Deep Link Sharing url - This url does 2 features:-->
    <!--1) It is the link shared when the share button is pressed, along with the place id-->
    <!--2) The app will listen for this url, so when it is opened the app will open.-->
    <string name="deep_link">cityguide.neurondigital.com</string>


    <!--Facebook App IDs - Create a facebook app from here: https://developers.facebook.com/apps/-->
    <!--Facebook App ID - eg: 2545454566987555-->
    <string name="facebook_app_id">xxxxxxxxxxx</string>
    <!--Facebook fb+ID- eg: fb2545454566987555-->
    <string name="fb_login_protocol_scheme">fbxxxxxxxxxxxxxxxxx</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="record_detail">Record detail</string>
    <string name="start_time">Start Time:</string>
    <string name="time">Time of application:</string>
    <string name="duration">Duration:</string>
    <string name="end_time">End time:</string>
    <string name="save">Save</string>
    <string name="start_timer">START\nTIMER</string>
    <string name="dummy_start_time">Jan 14, 2021, 10:39pm</string>
    <string name="dummy_end_time">Jan 14, 2021, 11:39pm</string>
    <string name="error">Error</string>
    <string name="start_date_must_be_before_end_date">Start date must be before end date</string>
    <string name="OK">OK</string>
    <string name="select_date_time">Select time and date</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="day_night">Day / Night</string>
    <string name="show_help_video">Help Video</string>
    <string name="reset">Reset</string>
    <string name="coninue_str">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_list">Event List</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="dummy_date">Wed January 27, 2021</string>
    <string name="mld_massage">Add a MLD massage session</string>
    <string name="file_password">File Password</string>
    <string name="file_password_message">Please share this password to the email recipient via other means</string>

</resources>
