<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorWhiteBackground"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/record_detail_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appcolor"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/record_detail"
        android:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@color/colorWhiteBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relLayout1">

            <TextView
                android:id="@+id/time_txt"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time_txt"
                android:ems="10"
                android:text="@string/dummy_start_time"
                android:textSize="18sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relLayout2"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_below="@id/relLayout1"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/sc_note_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:text="You applied: "
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sc_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sc_note_txt"
                android:ems="10"
                android:text="cream?"
                android:textSize="18sp" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="139dp"
                android:layout_height="28dp"
                android:layout_below="@id/sc_note_txt"
                android:layout_alignLeft="@id/sc_note"
                android:layout_marginLeft="243dp"
                android:layout_toRightOf="@+id/sc_note"
                android:background="@drawable/custom_button"
                android:text="Edit Note"
                android:textColor="@color/colorWhiteBackground" />

            <EditText
                android:id="@+id/new_note"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@id/sc_note"
                android:layout_marginTop="13dp"
                android:ems="10"
                android:hint="Enter new note here, then click save"
                android:gravity="top"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>


    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:gravity="bottom"-->
    <!--        android:orientation="vertical">-->

    <!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <Button
            android:id="@+id/record_detail_save_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/save"
            android:textColor="@color/colorWhiteBackground" />
    </LinearLayout>


</LinearLayout>